Various bugfixes
Fixed Account page being accessed by unnecessary HTML form.
Fixed Account page being called Preferences.
Fixed overcomplicated PHP lines.
Fixed registration page redirecting to the error page incorrectly.
Fixed registration page redirecting to the success page incorrectly.
Fixed default PHP script saving too much data for each page.
Fixed default PHP script not importing data correctly.
Fixed incorrect text animation playing on tiles.

--- a/webassets/menuStyle.css
+++ b/webassets/menuStyle.css
@@ -39,17 +39,3 @@ div.vSeparator {
 	height: 1.5em;
 	width: 100%;
 }
-p.tileText {
-  font-family: "MoonFlower";
-  color: white;
-  font-size: 420%;
-  text-align: center;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  filter: blur(2px);
-  opacity: 0;
-  transition: 0.7s ease-out;
-}
